--- a/idioms/ffi/errors.html
+++ b/idioms/ffi/errors.html
@@ -141,7 +141,7 @@
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>In foreign languages like C, errors are represented by return codes.
 However, Rust's type system allows much more rich error information to be
-captured a propogated through a full type.</p>
+captured and propogated through a full type.</p>
 <p>This best practice shows different kinds of error codes, and how to expose them
 in a usable way:</p>
 <ol>
