--- a/idioms/temporary-mutability.html
+++ b/idioms/temporary-mutability.html
@@ -142,8 +142,8 @@
 <p>Often it is necessary to prepare and process some data, but after that data are
 only inspected and never modified. The intention can be made explicit by redefining
 the mutable variable as immutable.</p>
-<p>It can be done either by processing data within nested block or by redefining
-variable.</p>
+<p>It can be done either by processing data within a nested block or by redefining
+the variable.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Say, vector must be sorted before usage.</p>
 <p>Using nested block:</p>
