--- a/functional/generics-type-classes.html
+++ b/functional/generics-type-classes.html
@@ -156,14 +156,14 @@ user <em>actually changes the type</em>. In other words, <code>Vec&lt;isize&gt;<
 type system.</p>
 <p>This is called <strong>monomorphization</strong>, where different types are created from
 <strong>polymorphic</strong> code.  This special behavior requires <code>impl</code> blocks to specify
-generic parameters: different values for the generic type cause different types,
+generic parameters. Different values for the generic type cause different types,
 and different types can have different <code>impl</code> blocks.</p>
 <p>In object-oriented languages, classes can inherit behavior from their parents.
 However, this allows the attachment of not only additional behavior to
 particular members of a type class, but extra behavior as well.</p>
 <p>The nearest equivalent is the runtime polymorphism in Javascript and Python,
 where new members can be added to objects willy-nilly by any constructor.
-Unlike those languages, however, all of Rust's additional methods can be type
+However, unlike those languages, all of Rust's additional methods can be type
 checked when they are used, because their generics are statically defined. That
 makes them more usable while remaining safe.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
@@ -372,7 +372,7 @@ concept, and a slightly different technique. <sup class="footnote-reference"><a 
 </li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>See: <a href="https://doc.rust-lang.org/stable/src/std/ffi/c_str.rs.html#799-801">impl From&lt;CString&gt; for Vec&lt;u8&gt;</a></p>
+<p>See: <a href="https://doc.rust-lang.org/1.59.0/src/std/ffi/c_str.rs.html#803-811">impl From&lt;CString&gt; for Vec&lt;u8&gt;</a></p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
 <p>See: <a href="https://doc.rust-lang.org/stable/src/alloc/collections/binary_heap.rs.html#1345-1354">impl&lt;T&gt; From&lt;Vec&lt;T, Global&gt;&gt; for BinaryHeap&lt;T&gt;</a></p>
