--- a/patterns/behavioural/RAII.html
+++ b/patterns/behavioural/RAII.html
@@ -142,7 +142,7 @@
 <p><a href="https://en.wikipedia.org/wiki/Resource_Acquisition_Is_Initialization">RAII</a> stands for &quot;Resource Acquisition is Initialisation&quot; which is a
 terrible name. The essence of the pattern is that resource initialisation is done
 in the constructor of an object and finalisation in the destructor. This pattern
-is extended in Rust by using an RAII object as a guard of some resource and relying
+is extended in Rust by using a RAII object as a guard of some resource and relying
 on the type system to ensure that access is always mediated by the guard object.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Mutex guards are the classic example of this pattern from the std library (this
