deploy: ab81da9b208ce97586c09078726d8245ae0fad02

--- a/patterns/structural/unsafe-mods.html
+++ b/patterns/structural/unsafe-mods.html
@@ -118,6 +118,9 @@
                         <a href="https://github.com/rust-unofficial/patterns" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
+                        <a href="https://github.com/rust-unofficial/patterns/edit/main/./patterns/structural/unsafe-mods.md" title="Suggest an edit" aria-label="Suggest an edit">
+                            <i id="git-edit-button" class="fa fa-edit"></i>
+                        </a>
 
                     </div>
                 </div>
