--- a/patterns/behavioural/strategy.html
+++ b/patterns/behavioural/strategy.html
@@ -212,7 +212,9 @@ impl Formatter for Json {
             buf.push_str(&amp;entry);
             buf.push(',');
         }
-        buf.pop(); // remove extra , at the end
+        if !data.is_empty() {
+            buf.pop(); // remove extra , at the end
+        }
         buf.push(']');
     }
 }
