deploy: f5f8078f46951d16e948df040335188cbce4013e

--- a/functional/lenses.html
+++ b/functional/lenses.html
@@ -156,7 +156,7 @@ Nevertheless, exploring the concept may be helpful to understand other
 patterns in Rust APIs, such as <a href="../patterns/behavioural/visitor.html">visitors</a>.
 They also have niche use cases.</p>
 <h2 id="lenses-uniform-access-across-types"><a class="header" href="#lenses-uniform-access-across-types">Lenses: Uniform Access Across Types</a></h2>
-<p>A lens is a concept from functional progamming languages that allows
+<p>A lens is a concept from functional programming languages that allows
 accessing parts of a data type in an abstract, unified way.<sup class="footnote-reference"><a href="#1">1</a></sup>
 In basic concept, it is similar to the way Rust traits work with type erasure,
 but it has a bit more power and flexibility.</p>
